force-app/main/default/objects/Lead/fields/aclk__c.field-meta.xml
<CustomField>
    <fullName>aclk__c</fullName>
    <label>aclk</label>
    <length>255</length>
    <type>Text</type>
</CustomField>