force-app/main/default/objects/Lead/fields/AssignmentNumber__c.field-meta.xml
<CustomField>
    <fullName>AssignmentNumber__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>Assignment Number</label>
    <type>AutoNumber</type>
</CustomField>