force-app/main/default/objects/Lead/fields/CommunicationChannel__c.field-meta.xml
<CustomField>
    <fullName>CommunicationChannel__c</fullName>
    <label>Communication Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Support Chat</fullName>
            </value>
            <value>
                <fullName>Tech Chat</fullName>
            </value>
            <value>
                <fullName>Telegram</fullName>
            </value>
            <value>
                <fullName>Skype</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>