force-app/main/default/objects/Lead/fields/customclid__c.field-meta.xml
<CustomField>
    <fullName>customclid__c</fullName>
    <label>customclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>