force-app/main/default/objects/Lead/fields/DirectPrice__c.field-meta.xml
<CustomField>
    <fullName>DirectPrice__c</fullName>
    <label>Direct Price</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>