force-app/main/default/objects/Lead/fields/Email3__c.field-meta.xml
<CustomField>
    <fullName>Email3__c</fullName>
    <label>Email 3</label>
    <type>Email</type>
</CustomField>