force-app/main/default/objects/Lead/fields/ExpectedTurnoverMonth__c.field-meta.xml
<CustomField>
    <fullName>ExpectedTurnoverMonth__c</fullName>
    <label>Expected Turnover ($ Month)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt; 100k</fullName>
            </value>
            <value>
                <fullName>&gt; 100k</fullName>
            </value>
            <value>
                <fullName>&gt; 300k</fullName>
            </value>
            <value>
                <fullName>&gt; 500 k</fullName>
            </value>
            <value>
                <fullName>&gt; 700 к</fullName>
            </value>
            <value>
                <fullName>&gt; 1m</fullName>
            </value>
            <value>
                <fullName>&gt; 3m</fullName>
            </value>
            <value>
                <fullName>&gt; 5m</fullName>
            </value>
            <value>
                <fullName>&gt; 10m</fullName>
            </value>
            <value>
                <fullName>100</fullName>
                <isActive>false</isActive>
                <label>100</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>