force-app/main/default/objects/Lead/fields/FirstActionDateTime__c.field-meta.xml
<CustomField>
    <fullName>FirstActionDateTime__c</fullName>
    <label>First Action DateTime</label>
    <type>DateTime</type>
</CustomField>