force-app/main/default/objects/Lead/fields/FirstReactionDate__c.field-meta.xml
<CustomField>
    <fullName>FirstReactionDate__c</fullName>
    <label>First Reaction Date</label>
    <type>DateTime</type>
</CustomField>