force-app/main/default/objects/Lead/fields/General_Traffic__c.field-meta.xml
<CustomField>
    <fullName>General_Traffic__c</fullName>
    <label>General Traffic</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>