force-app/main/default/objects/Lead/fields/msclkid__c.field-meta.xml
<CustomField>
    <fullName>msclkid__c</fullName>
    <label>msclkid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>