force-app/main/default/objects/Lead/fields/NOTRelevant__c.field-meta.xml
<CustomField>
    <fullName>NOTRelevant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOT Relevant</label>
    <type>Checkbox</type>
</CustomField>