force-app/main/default/objects/Lead/fields/Other_GEO__c.field-meta.xml
<CustomField>
    <fullName>Other_GEO__c</fullName>
    <label>Other GEO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>