force-app/main/default/objects/Lead/fields/Other_Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Integration_Type__c</fullName>
    <label>Other Integration Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>