force-app/main/default/objects/Lead/fields/Other_Product__c.field-meta.xml
<CustomField>
    <fullName>Other_Product__c</fullName>
    <label>Other Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>