force-app/main/default/objects/Lead/fields/PrefferedServices__c.field-meta.xml
<CustomField>
    <fullName>PrefferedServices__c</fullName>
    <label>Preffered Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open Banking</fullName>
            </value>
            <value>
                <fullName>Cards Processing</fullName>
            </value>
            <value>
                <fullName>Pay by Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>