force-app/main/default/objects/Lead/fields/ResellerPartner__c.field-meta.xml
<CustomField>
    <fullName>ResellerPartner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller / Partner</label>
    <referenceTo>Reseller__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>