force-app/main/default/objects/Lead/fields/ResellerPrice__c.field-meta.xml
<CustomField>
    <fullName>ResellerPrice__c</fullName>
    <label>Reseller Price</label>
    <type>TextArea</type>
</CustomField>