force-app/main/default/objects/Lead/fields/ResellerWLPrice__c.field-meta.xml
<CustomField>
    <fullName>ResellerWLPrice__c</fullName>
    <label>Reseller/WL Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>