force-app/main/default/objects/Lead/fields/Score_Formula__c.field-meta.xml
<CustomField>
    <fullName>Score_Formula__c</fullName>
    <formula>IF(
    ISBLANK(Website) || CONTAINS( $Setup.Noda_Custom_Settings__c.Domainst_Black_List__c , Website), 0,
    IF(
        General_Traffic__c &lt; 5000, 0,
        IF(
            AND(5000 &lt; General_Traffic__c, General_Traffic__c &lt;= 20000), 1,
            IF(
                AND(20000 &lt; General_Traffic__c, General_Traffic__c &lt;= 50000), 2,
                IF(
                    AND(50000 &lt; General_Traffic__c, General_Traffic__c &lt;= 100000), 3,
                    IF(
                        AND(100000 &lt; General_Traffic__c, General_Traffic__c &lt;= 300000), 4,
                        IF(
                            General_Traffic__c &gt; 300000, 5,
                            null
                        )
                    )
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>