force-app/main/default/objects/Lead/fields/twclid__c.field-meta.xml
<CustomField>
    <fullName>twclid__c</fullName>
    <label>twclid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>