force-app/main/default/objects/Lead/fields/UTMCampaign__c.field-meta.xml
<CustomField>
    <fullName>UTMCampaign__c</fullName>
    <label>UTM Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>