force-app/main/default/objects/Lead/fields/UTMContent__c.field-meta.xml
<CustomField>
    <fullName>UTMContent__c</fullName>
    <label>UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>