force-app/main/default/objects/Lead/fields/UTMMeduim__c.field-meta.xml
<CustomField>
    <fullName>UTMMeduim__c</fullName>
    <label>UTM Meduim</label>
    <length>255</length>
    <type>Text</type>
</CustomField>