force-app/main/default/objects/Lead/validationRules/isIndustryRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>isIndustryRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISPICKVAL(Status, &quot;New&quot;)),
  NOT(ISPICKVAL(Status, &quot;Meeting&quot;)),
  ISPICKVAL(Industry, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Industry</errorDisplayField>
    <errorMessage>Industry should be filled</errorMessage>
</ValidationRule>