force-app/main/default/objects/Lead/listViews/LeadQueue.listView-meta.xml
<ListView>
    <fullName>LeadQueue</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <label>Lead Queue</label>
    <queue>LeadQueue</queue>
</ListView>