force-app/main/default/objects/Lead/listViews/Updated_By_Dmitry.listView-meta.xml
<ListView>
    <fullName>Updated_By_Dmitry</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>UPDATEDBY_USER.ALIAS</field>
        <operation>equals</operation>
        <value>dkrik</value>
    </filters>
    <filters>
        <field>LEAD.LAST_UPDATE</field>
        <operation>equals</operation>
        <value>4/20/2023 9:03 PM</value>
    </filters>
    <label>Updated By Dmitry</label>
</ListView>